--- a/VisualAlgo/public/angular.json
+++ b/VisualAlgo/public/angular.json
@@ -26,7 +26,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/p5/lib/p5.min.js",
+              "src/assets/js/algos.js"
+            ]
           },
           "configurations": {
             "production": {
