--- a/VisualAlgo/public/angular.json
+++ b/VisualAlgo/public/angular.json
@@ -24,7 +24,9 @@
               "src/assets"
             ],
             "styles": [
+              "../node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
+
             ],
             "scripts": [
               "node_modules/p5/lib/p5.min.js"
